--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -36,7 +36,11 @@
     <string>This app needs access to your location to autofill your address.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-	
+	<key>LSApplicationQueriesSchemes</key>
+    <array>
+     <string>sms</string>
+     <string>tel</string>
+    </array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
