--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   geocoding: ^4.0.0
   flutter_launcher_icons: ^0.14.4
   flutter_multi_formatter: ^2.13.10
+  url_launcher: ^6.3.2
 
 
 
